--- a/3° Año/Lenguajes de Programación/Unidad 5/3. Implementación en Memoria.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/3. Implementación en Memoria.md
@@ -9,7 +9,7 @@ Debido a que la mayoría de los lenguajes de programación utilizan la notación
 
 #### Implementación de la Asignación
 
-Para las sentencias de asignación lo que se hace es resolver primero las expresiones en caso de que y luego se asigna su valor a la celda de memoria correspondiente a esa variable, esto generalmente se hace utilizando la instrucción ***set*** del lenguaje ensamblador. En caso de que se requiera almacenar valores intermedios, estos permanecerán en memoria hasta que sean utilizados y posteriormente asignados a alguna celda.
+Para las sentencias de asignación lo que se hace es resolver primero las expresiones en caso de que sea necesario y luego se asigna su valor a la celda de memoria correspondiente a esa variable, esto generalmente se hace utilizando la instrucción ***set*** del lenguaje ensamblador. En caso de que se requiera almacenar valores intermedios, estos permanecerán en memoria hasta que sean utilizados y posteriormente asignados a alguna celda.
 
 #### Implementación de la Estructura de Selección
 
@@ -17,4 +17,4 @@ Tanto para la selección simple como para la selección múltiple se emplean los
 
 #### Implementación en Memoria de las Estructuras de Iteración
 
-Al igual que las estructuras de selección, las iteraciones se implementan utilizando los saltos brindados por el hardware, con la particularidad de que en las estructuras iterativas controladas por contador la cantidad de veces que se va a realizar la iteración ya es conocida, al igual que el valor del incremento. A diferencia de las estructuras de iteración controladas lógicamente, donde va a depender del valor de verdad que se le haya asignado a dicha sentencia.
+Al igual que las estructuras de selección, las iteraciones se implementan utilizando los saltos brindados por el hardware, con la particularidad de que en las estructuras iterativas controladas por contador la cantidad de veces que se va a realizar la iteración ya es conocida, al igual que el valor del incremento. A diferencia de las estructuras de iteración controladas lógicamente, donde la detención del bucle va a depender del valor de verdad que se le haya asignado a dicha sentencia.
