--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -33,7 +33,7 @@ El objetivo específico de una investigación puede ser de diversos tipos. Una c
 
 El proceso de investigación involucra una serie de actividades que se llevan a cabo una tras otra, en una serie de etapas fija y lineal. La descripción de la investigación experimental puede resumirse como:
 
-1. Construir una proto-teoría (hipótesis, modelo).
+1. Construir una proto-teoría, es decir, plantea una hipótesis y establece un modelo para comprobar dicha hipótesis.
 2. Hacer una predicción basada en la proto-teoría.
 3. Diseñar y llevar a cabo experimentos para testear la predicción.
 4. Analizar y comparar resultados de experimentos con la predicción.
@@ -49,8 +49,7 @@ Los principales problemas del modelo secuencial, que pueden ser extrapolados al 
 
 #### Modelo Generalizado
 
-El modelo de proceso de investigación generalizado reconoce que las etapas del proceso de investigación dependen de la temática y de la naturaleza de la investigación. La recolección de datos y el análisis de datos no tienen un rol importante en investigación en matemática pura, ni en grandes áreas de ciencias de la computación. En lugar de esto, los investigadores de dichas áreas acostumbran hacer conjeturas que demuestran matemáticamente. El modelo de investigación generalizado provee caminos alternativos dependiendo de la temática y la naturaleza de la investigación desarrollada, pero cada ruta o camino es secuencial.
-Los problemas que acarrea el modelo generalizado son:
+El modelo de proceso de investigación generalizado reconoce que las etapas del proceso de investigación dependen de la temática y de la naturaleza de la investigación. La recolección de datos y el análisis de datos no tienen un rol importante en investigación en matemática pura, ni en grandes áreas de ciencias de la computación. En lugar de esto, los investigadores de dichas áreas acostumbran hacer conjeturas que demuestran matemáticamente. El modelo de investigación generalizado provee caminos alternativos dependiendo de la temática y la naturaleza de la investigación desarrollada, pero cada ruta o camino es secuencial. Los problemas que acarrea el modelo generalizado son:
 1. No hay repeticiones o ciclos
 2. Punto de comienzo y fin son fijos
 
@@ -82,11 +81,7 @@ El modelo de proceso evolutivo es el que mejor describe el proceso
 ***Método*** proviene del griego *methodos* (“camino” o “vía”) y hace referencia al medio que se utiliza para llegar a una cierta meta. Por otro lado, la palabra ***Científico***, es el adjetivo que menciona lo vinculado a la ciencia, es decir, un conjunto de técnicas y procedimientos que se emplean para producir conocimiento.
 El método científico, por lo tanto, se refiere a la serie de etapas que hay que recorrer para obtener un conocimiento válido desde el punto de vista científico, utilizando para esto instrumentos que resulten fiables. Lo que hace este método es minimizar la influencia de la subjetividad del científico en su trabajo. El método científico está basado en dos preceptos que determinan la utilidad del mismo como elemento de creación de conocimiento, la ***reproducibilidad*** y la ***refutabilidad***, estos elementos son los pilares fundamentales para el objetivo de la reducción de la subjetividad.
 La reproducibilidad implica la capacidad de repetir un determinado experimento, en cualquier lugar y por cualquier persona.  Este pilar se basa, esencialmente, en la comunicación y publicidad de los resultados obtenidos, y su verificación por la comunidad científica.
-La refutabilidad, implica que toda proposición científica debe ser susceptible de ser falsada o refutada, siendo la falsabilidad el *modus tollendo tollens* del método hipotético-deductivo experimental. En otras palabras, el método científico rechaza las verdades absolutas, por lo tanto, las proposiciones científicas nunca pueden considerarse absolutamente verdaderas, sino a lo sumo no refutadas.
-
->[!quote] Cita de Einstein
->"*No existe una cantidad suficiente de experimentos que muestren que estoy en lo correcto; pero un simple experimento puede probar que me equivoco*“.
-
+La refutabilidad, implica que toda proposición científica debe ser susceptible de ser refutada, siendo la falsabilidad el *modus tollendo tollens* del método hipotético-deductivo experimental. En otras palabras, el método científico rechaza las verdades absolutas, por lo tanto, las proposiciones científicas nunca pueden considerarse absolutamente verdaderas, sino a lo sumo no refutadas.
 No todo descubrimiento surge de un proceso “inmaculado” de aplicación del método científico, según [Wikipedia](https://es.wikipedia.org/wiki/Método_científico#Rol_en_las_posibilidades_del_des), entre un tercio y la mitad de los descubrimientos científicos son hallados debido a la “casualidad”. De acuerdo a Dunbar, K., & Fugelsang, J. (2005), es normal que los científicos declaren haber tenido “suerte”, sin embargo, podríamos pensar que esto en realidad es una “casualidad causal”.
 La investigación tiende a aplicar heurísticas que aprovechan la oportunidad y lo inesperado. Esto es denominado "antifragilidad“. El proceso del descubrimiento puede comenzar con un grupo de investigadores encontrando fallos en sus experimentos, estos resultados inesperados llevan a los investigadores a intentar arreglar lo que piensan que puede ser el error en sus métodos. Llegado un punto, el investigador decide que el error es demasiado persistente y sistemático como para ser una coincidencia, los aspectos altamente controlados, curiosos y cautelosos del método científico son, por tanto, lo que lo hacen adecuado para identificar dichos errores persistentes. En este momento, el investigador empezará a pensar diversas explicaciones teóricas de dicho fallo, frecuentemente buscando la ayuda de colegas pertenecientes a diferentes dominios de la experiencia.
 El método científico está compuesto de los siguientes elementos:
