--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -33,7 +33,7 @@ A día de hoy existen tres formas o maneras de expresar/escribir las expresiones
 ## Evaluación de los Operadores
 
 Para esto, todos los lenguajes establecen un conjunto de reglas implícitas y explícitas que determinaran o alteraran el orden en el que se irán realizando las operaciones en una expresión.
-Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de procedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de izquierda a derecha a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que existen lenguajes de programación que establecen otro tipo de reglas, como el caso de *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
+Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de precedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de izquierda a derecha a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que existen lenguajes de programación que establecen otro tipo de reglas, como el caso de *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
 Las reglas explícitas son aquellas que utiliza el programador para alterar la prioridad de los operadores, por lo general se utiliza los paréntesis para lograr esto, alterando así la procedencia y la asociatividad establecidas por el lenguaje.
 
 ## Evaluación de Operandos
@@ -56,7 +56,7 @@ Es una característica de los programas que permite que dos expresiones que tien
 
 #### Sobrecarga de Operadores
 
-Como ya vimos en la unidad 4 en la sección de [[1. Sistema de Tipos#Polimorfismo | Pilomorfismo]], cuando un operador está sobrecargado, significa que puede operar sobre muchos tipos de datos diferentes, si bien este mecanismo facilita las escritura de los programas, se pierde un poco la legibilidad al momento de debugger los programas, además de que el traductor pierde capacidades para detectar errores. Estos defectos pueden solucionarse con el uso de nuevos símbolos de operación o dándole la posibilidad al programador de crear sus propios operadores, como es el caso de C++ y C#, eso si, la inserción de un nuevo símbolo va a depender del dominio de aplicación de ese lenguaje.
+Como ya vimos en la unidad 4 en la sección de [[1. Sistema de Tipos#Polimorfismo | Polimorfismo]], cuando un operador está sobrecargado, significa que puede operar sobre muchos tipos de datos diferentes, si bien este mecanismo facilita las escritura de los programas, se pierde un poco la legibilidad al momento de debugger los programas, además de que el traductor pierde capacidades para detectar errores. Estos defectos pueden solucionarse con el uso de nuevos símbolos de operación o dándole la posibilidad al programador de crear sus propios operadores, como es el caso de C++ y C#, eso si, la inserción de un nuevo símbolo va a depender del dominio de aplicación de ese lenguaje.
 
 #### Evaluación en Cortocircuito
 
