--- a/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
@@ -11,7 +11,7 @@ En lenguajes como C se pueden combinar las operaciones de incremento o decrement
 
 ##### Asignación en Modo Mixto
 
-Las asignaciones en modo mixto se presentan cuando el tipo de dato de la variable destino es distinto del que va a ser asignado a esta. De acuerdo a como haya sido diseñado el lenguaje de programación, tendremos los siguientes mecanismos:
+Las asignaciones en modo mixto se presentan cuando el tipo de dato de la variable destino es distinto del tipo de datos del valor que se le va a ser asignado. De acuerdo a como haya sido diseñado el lenguaje de programación, tendremos los siguientes mecanismos para resolver este problema:
 
 - **Usa reglas de coerción libremente**. En lenguajes como C o Perl el compilador aplica coerciones a cualquier tipo de variable para poder realizar la operación, esto deriva en un mayor riesgo a que se produzcan errores.
 - **Usa reglas de coerción solamente con promoción**. En Java y C# las coerciones se aplican solo hacia arriba de la jerarquía de tipos, esto brinda mayor confiabilidad al código escrito en estos lenguajes.
@@ -24,6 +24,7 @@ Las asignaciones en modo mixto se presentan cuando el tipo de dato de la variabl
 Es cuando el resultado de una sentencia de asignación puede utilizarse como un operador en una expresión, lenguajes como C, C++ o Java permiten este tipo de asignaciones, esto obviamente dificulta la legibilidad, puede provocar efectos colaterales y dificultar la detección de errores por parte del usuario.
 Lenguajes como Pascal y Ada tiene un enfoque distinto, donde las asignaciones son instrucciones independientes y el destino se restringe a una variable.
 
+---
 ### Estructuras de Control
 
 - **Secuencia** -> Es el mecanismo más simple para estructurar el control entre sentencia, en este modelo todas las instrucciones se ejecutan en el orden en el que aparecen.
@@ -43,7 +44,7 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 	3. La forma de las sentencias que podrán ser ejecutadas cuando se cumpla la condición. Dichas sentencias pueden ser simples o compuestas, para este último caso el diseñador debe comenzar a pensar en introducir delimitadores de sentencia, como en el caso de los "***;***".
 
 >[!tldr] Selectores Anidados
->La mayoría de los lenguajes de programación permiten añadir sentencias de selección bidireccionales dentro de otras sentencias bidireccionales, esto atrae problemas de ambigüedad, como se vio en la [[1. Sintaxis#Características Generales de una Buena Sintaxis| Unidad 2]]. Para resolver eso, los lenguajes encontraron múltiples mecanismos mediante los cuales se puede solucionar este problema:
+>La mayoría de los lenguajes de programación permiten añadir sentencias de selección bidireccionales dentro de otras sentencias bidireccionales, esto atrae problemas de ambigüedad, como se vio en la [[1. Sintaxis#Características Generales de una Buena Sintaxis| Unidad 2]]. Para resolver eso, los lenguajes encontraron múltiples mecanismos mediante los cuales se puede solucionar el problema de ambigüedad:
 >- Mediante las reglas de la semántica estática, por ejemplo en Pascal, el ***else*** formará parte del primer ***if*** que haya abierto.
 >- Uso de sentencias compuestas, por ejemplo en el caso de Perl, para delimitar una sentencia utiliza las llaves.
 >- Uso de delimitadores de sentencia, muchos lenguajes de programación utilizan los "**;**" al finalizar cada sentencia.
@@ -55,7 +56,7 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 Permiten que una sentencia o grupo de sentencias se ejecuten cero o más veces, la ventaja con la que cuentan los lenguajes que incorporan este tipo de estructuras es que los vuelve más flexibles, la escritura de los programas se torna más simple y como consecuencia más cortos, al igual que las estructuras de selección, la secuencia de iteración sé pueden categorizar en:
 
 - **Sentencias iterativas controladas por contador**: Este tipo de estructuras constan de 3 elementos principales, una variable de loop la cual va a especificar el valor inicial, una expresión de control para la variable y el incremento que va a sufrir la variable de loop en cada iteración. Esta estructura resulta extremadamente útil cuando la cantidad de ciclos que se debe realizar en conocida. Esta estructura mejora la legibilidad y confiabilidad de los programas y evita que se generen resultados inesperados.
-- **Sentencias iterativas controladas lógicamente**: Estas estructuras se utilizan cuando no se sabe la cantidad de iteraciones que se deben realizar para resolver el problema. Al igual que en las sentencias de selección, en estas estructuras también se deben tener algunas consideraciones en cuanto al diseño, en primer lugar se debe establecer si la evaluación de la condición va a ser previa a entrar al loop (un ciclo while clasico) o si la evaluación va a ser posterior al entrar al loop (do-while). Existen lenguajes de programación que emplean ambos métodos, pero otros que eligen solo una opción sobre la otra, como es el caso de Ada.
+- **Sentencias iterativas controladas lógicamente**: Estas estructuras se utilizan cuando no se sabe la cantidad de iteraciones que se deben realizar para resolver el problema. Al igual que en las sentencias de selección. En estas estructuras también se deben tener algunas consideraciones en cuanto al diseño, en primer lugar se debe establecer si la evaluación de la condición va a ser previa a entrar al loop (while) o si la evaluación va a ser posterior al entrar al loop (do-while). Existen lenguajes de programación que emplean ambos métodos, pero otros que eligen solo una opción sobre la otra, como es el caso de Ada.
 
 >[!tldr] Bifurcación Incondicional
 >Transfiere el control de la ejecución a alguna parte específica del programa, estas sentencias son más típicas de los lenguajes antiguos, y a día de hoy ningún lenguaje de programación lo emplea, esto es debido a que las desventajas en cuanto a la legibilidad, el mantenimiento y la seguridad de los programas pesaban mucho más que las ventajas que brindaba como lo es la eficiencia y la facilidad de uso
