--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -1,4 +1,4 @@
-Las expresiones son construcciones sintácticas que permiten al programador cambiar valores de las variables y realizar operaciones para calcular nuevos valores, generalmente las expresiones están compuestas por ***operadores***, ya sea símbolos mnemotécnicos o palabras reservadas, y de ***operandos***, que pueden ser variables o constantes e incluso literales.
+Las expresiones son construcciones sintácticas que permiten al programador cambiar valores de las variables y realizar operaciones para calcular nuevos valores. Generalmente las expresiones están compuestas por ***operadores***, ya sea símbolos mnemotécnicos o palabras reservadas, y de ***operandos***, que pueden ser variables o constantes e incluso literales.
 Un aspecto muy importante a resaltar es la importancia de la sintaxis y la semántica de las expresiones, debido a que cada lenguaje de programación puede tratar a las expresiones de maneras distintas, como veremos más adelante.
 
 ## Clasificación de las Expresiones
@@ -33,13 +33,13 @@ A día de hoy existen tres formas o maneras de expresar/escribir las expresiones
 ## Evaluación de los Operadores
 
 Para esto, todos los lenguajes establecen un conjunto de reglas implícitas y explícitas que determinaran o alteraran el orden en el que se irán realizando las operaciones en una expresión.
-Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de precedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de izquierda a derecha a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que existen lenguajes de programación que establecen otro tipo de reglas, como el caso de *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
+Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de precedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de izquierda a derecha a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que cada lenguaje de programación que establece sus propias reglas, por ejemplo, *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
 Las reglas explícitas son aquellas que utiliza el programador para alterar la prioridad de los operadores, por lo general se utiliza los paréntesis para lograr esto, alterando así la procedencia y la asociatividad establecidas por el lenguaje.
 
 ## Evaluación de Operandos
 
 Por lo general, las políticas en cuanto a la evaluación de los operandos es establecida por los lenguajes al momento de su diseño. Al momento de resolver una expresión, el operando puede que ya haya sido evaluado o puede que no todos los operandos hayan sido evaluados, de este último caso se desprenden mecanismos como la ***evaluación perezosa***.
-Las variables y constantes se evalúan obteniendo su valor desde memoria, aunque las constantes no siempre son evaluadas, por lo general, si la constante forma parte de instrucciones en lenguaje máquina, no se requiere que estas sean traídas de memoria. Para las expresiones que se encuentran entre paréntesis, tanto los operadores como los operandos son evaluados y el valor obtenido de la resolución de la expresión es usado como operando.
+Las variables y constantes se evalúan obteniendo su valor desde memoria. Aunque las constantes no siempre son evaluadas, si la constante forma parte de instrucciones en lenguaje máquina, no se requiere que estas sean traídas de memoria. Para las expresiones que se encuentran entre paréntesis, tanto los operadores como los operandos son evaluados y el valor obtenido de la resolución de la expresión es usado como operando.
 
 #### Efectos Colaterales
 
