--- a/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
@@ -39,7 +39,7 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 ##### Selección
 
 - **Bidireccionales**: Es el típico mecanismo de control del tipo ***if-then-else*** que varios lenguajes de programación poseen. Para este tipo de estructura se debe tener algunas consideraciones a la hora del diseño:
-	1. El tipo de sentencia que va a controlar, estas pueden restringirse únicamente a expresiones booleanas, o también permitir expresiones aritméticas como es el caso de C.
+	1. El tipo de la expresión que va a controlar, estas pueden restringirse únicamente a expresiones booleanas, o también permitir expresiones aritméticas como es el caso de C.
 	2. La forma de la expresión de control, es decir, la manera en que se construye sintácticamente la condición que determina la ejecución de ciertas partes del código en una estructura de control condicional.
 	3. La forma de las sentencias que podrán ser ejecutadas cuando se cumpla la condición. Dichas sentencias pueden ser simples o compuestas, para este último caso el diseñador debe comenzar a pensar en introducir delimitadores de sentencia, como en el caso de los "***;***".
 
