--- a/3° Año/Lenguajes de Programación/Unidad 5/3. Implementación en Memoria.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/3. Implementación en Memoria.md
@@ -4,7 +4,7 @@
 Debido a que la mayoría de los lenguajes de programación utilizan la notación infija, y como ya mencionamos anteriormente, esta notación es muy difícil de decodificar, este tipo de expresiones se traducen a forma ejecutable que permite decodificar la expresión de forma más fácil. Esto se puede lograr de 3 formas:
 
 1. Se va traduciendo todas las expresiones a una secuencia de código máquina, como si de un intérprete se tratase.
-2. Se transforma toda la expresión en una estructura de árbol y posteriormente se lo sintetiza.
+2. Se transforma toda la expresión en una estructura de árbol y posteriormente se lo decodifica.
 3. Se traduce la expresión infija en una forma postfija o prefija y luego se decodifica la expresión.
 
 #### Implementación de la Asignación
