--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -20,13 +20,14 @@ La investigación está planteada para extender el cuerpo de conocimiento y comp
 El objetivo específico de una investigación puede ser de diversos tipos. Una clasificación clásica divide a los objetivos de un proceso de investigación en:
 
 - **Descripción**: Se refiere a los procesos usados para definir, clasificar y categorizar cosas y sus relaciones. Permite establecer generalizaciones y universalidades, estas descripciones deben ser sistemáticas y precisas, es decir, no dar ligar a ambigüedades y además debe caracterizar eventos y conceptos en términos de operaciones observables o procedimientos utilizados para medirlas. Sin obviar que esta descripción debe enfocarse en objetivos reales.
-- **Predicción**: Realizada a través del planteo de hipótesis, permitiendo realizar predicciones tentativas acerca de las relaciones entre variables que deben ser medibles. Cuando una variable se puede usar para predecir el comportamiento de otra, décimos que las mismas están correlacionadas, detectar correlaciones puede ser el objetivo de una investigación.
+- **Predicción**: Realizada a través del planteo de hipótesis, permitiendo realizar predicciones tentativas acerca de las relaciones entre variables que deben ser medibles. Cuando una variable se puede usar para predecir el comportamiento de otra, décimos que las mismas están ***correlacionadas***, detectar correlaciones puede ser el objetivo de una investigación.
 - **Explicación/entendimiento**: Posiblemente, el objetivo más importante de la investigación, involucra identificar las causas de un fenómeno. El identificar relaciones causales involucra tres aspectos principales:
-	- Covariación de eventos, es decir, las variables deben correlacionarse. Se debe tener en cuenta la posibilidad del azar.
+	- Las variables deben correlacionarse. Se debe tener en cuenta la posibilidad del azar.
 	- Secuencia de orden de tiempo adecuada, la causa debe preceder al efecto, es decir, para que 2 suceda a causa de 1, 1 debe preceder a 2 en toda ocasión.
-	- Eliminación de causas alternativas plausibles, para que la relación entre A y B sea verdadera, no debe existir un C causal de ambos A y B tal que al controlar la variable C la relación entre A y B desaparece.
-	- La eliminación de causas alternativas plausibles es el punto más dificultoso.
+	- Eliminación de causas alternativas plausibles, para que la relación entre A y B sea verdadera, no debe existir un C causal de ambos A y B tal que al controlar la variable C la relación entre A y B desaparece. Este paso en particular es el punto más dificultoso.
 
+>[!note] Nota de Clase
+>Cabe acarar que muchas veces un trabajo científico no se enmarca solo en uno de estos objetivos, sino que en un mismo artículo se puede realizar una descripción y una explicación, todo va a depender del enfoque que le dé el investigador.
 ## Modelos de Procesos de Investigación
 
 #### Modelo Secuencial
@@ -43,10 +44,6 @@ Los principales problemas del modelo secuencial, que pueden ser extrapolados al 
 1. Las etapas no son específicas según el tópico.
 2. No hay repeticiones o ciclos.
 3. El punto de comienzo y el orden de desarrollo es fijo.
-
->[!note] Nota
->Mirar todos los ejemplos de los diferentes puntos de vista en las filminas, que tampoco parecen tener mucha importancia.
-
 #### Modelo Generalizado
 
 El modelo de proceso de investigación generalizado reconoce que las etapas del proceso de investigación dependen de la temática y de la naturaleza de la investigación. La recolección de datos y el análisis de datos no tienen un rol importante en investigación en matemática pura, ni en grandes áreas de ciencias de la computación. En lugar de esto, los investigadores de dichas áreas acostumbran hacer conjeturas que demuestran matemáticamente. El modelo de investigación generalizado provee caminos alternativos dependiendo de la temática y la naturaleza de la investigación desarrollada, pero cada ruta o camino es secuencial. Los problemas que acarrea el modelo generalizado son:
