Se termino de agregar lo de estadistica y lo de SO

--- a/3° Año/Sistemas Operativos/Unidad 2/4. Concurrencia y Regiones Críticas.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/4. Concurrencia y Regiones Críticas.md
@@ -61,4 +61,22 @@ La ***sincronización*** es necesaria, ya que con esta podemos impedir que un pr
 	- **Instrucción CS (Compare and Swap)**: propias de máquinas IBM, se utiliza para actualizar una variable. Se realiza una copia de la variable y a posterioridad se verifica el contenido de la variable, si cambió es que entró otro proceso, por lo que se copian nuevamente los datos y si coincide se actualiza la información
 	- **Instrucción de intercambio**: intercambia el contenido de un registro con una posición de memoria. Durante la ejecución se bloquea el acceso a esa posición de memoria.
 
-Las ventajas de este tipo de métodos es que son a sistemas con cualquier número de procesos, ya sea mono-procesador o multiprocesador, además de ser simple y fácil de verificar. Con la desventaja que se emplea la espera activa y puede existir aplazamiento indefinido, ya que cuando un proceso abandona la sección crítica y hay más de un proceso esperando, la selección es arbitraria y se puede negar indefinidamente el procesador a un proceso. Sin mencionar que pueden producirse interbloqueos entre procesos.
+Las ventajas de este tipo de métodos es que son a sistemas con cualquier número de procesos, ya sea mono-procesador o multiprocesador, además de ser simple y fácil de verificar. Con la desventaja que se emplea, la espera activa y puede existir aplazamiento indefinido, ya que cuando un proceso abandona la sección crítica y hay más de un proceso esperando, la selección es arbitraria y se puede negar indefinidamente el procesador a un proceso. Sin mencionar que pueden producirse interbloqueos entre procesos.
+
+## Interbloqueo Entre Procesos
+
+El interbloqueo tan es llamado normalmente como Abrazo Mortal, y esto ocurre cuando un conjunto de procesos está en espera por recursos y nunca cambia de estado porque los recursos por los que espera están siendo utilizados por otros procesos en estado de espera.
+Hay cuatro condiciones necesarias para que haya interbloqueo, conociéndoles se puede prevenirlos:
+
+1. **Condición de Exclusión Mutua**. Solo un proceso puede acceder a una región crítica a la vez.
+2. **Condición de ocupar y esperar un recurso**. Un proceso ha adquirido al menos un recurso y está esperando para adquirir más recursos que son necesarios para completar su tarea
+3. **Condición de No apropiación**. Cada proceso tiene un tiempo definido para ocupar un recurso.
+4. **Condición de Espera circular**. Ocurre cuando un proceso $P_1$ está esperando algo de un segundo proceso $P_2$ al mismo tiempo que $P_2$ está esperando algo de $P_1$.
+
+Existen varias estrategias que pueden utilizar los sistemas operativos para evitar los interbloqueos:
+
+1. Prevenir y evitar el bloqueo, esta opción es la más costosa porque implica que el sistema operativo realice chequeos constantes a todos los proceso, lo que le quita tiempo de procesador a los procesos de usuario.
+2. Detectar y recuperar los bloqueos, este mecanismo hace que el sistema operativo mate a uno de los procesos que está produciendo el interbloqueo y luego lo vuelve a cargar en memoria, para elegir cuál de los procesos bloquear se tiene en cuenta la prioridad, el tiempo de proceso, el tiempo de recurso utilizados, las necesidades de los recursos y la facilidad para suspender y reanudar dicho proceso.
+3. Ignorar el problema, no es la más recomendable, ya que se va a estar desperdiciando memoria y se pueden generar más interbloqueos.
+
+Otro caso que puede ser provocada por los interbloqueos es la inanición o espera indefinida de un proceso que espera un recurso que está siendo ocupado por un proceso que está bloqueado.
