--- a/3° Año/Sistemas Operativos/Unidad 2/5. Hilos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/5. Hilos.md
@@ -1,14 +1,25 @@
-La principal razón de tener hilos es que en muchas aplicaciones se desarrollan varias actividades a la vez. Algunas de ésas se pueden bloquear de vez en cuando. Al descomponer una aplicación en varios hilos secuenciales que se ejecutan en cuasiparalelo, el modelo de programación se simplifica.
-Ya hemos visto este argumento antes: es precisamente la justificación de tener procesos. En vez de pensar en interrupciones, temporizadores y conmutaciones de contexto, podemos pensar en procesos paralelos. Sólo que ahora con los hilos agregamos un nuevo elemento: la habilidad de las entidades en paralelo de compartir un espacio de direcciones y todos sus datos entre ellas. Esta habilidad es esencial para ciertas aplicaciones, razón por la cual no funcionará el tener varios procesos.
-Un segundo argumento para tener hilos es que, como son más ligeros que los procesos, son más fáciles de crear y destruir.
-Una tercera razón de tener hilos es también un argumento relacionado con el rendimiento. Los hilos no producen un aumento en el rendimiento cuando todos ellos están ligados a la CPU, pero cuando hay una cantidad considerable de cálculos y operaciones de E/S, al tener hilos estas actividades se pueden traslapar, con lo cual se agiliza la velocidad de la aplicación. Por último, los hilos son útiles en los sistemas con varias CPUs, en donde es posible el verdadero paralelismo.
+La principal razón de tener hilos es que en muchas aplicaciones se desarrollan varias actividades a la vez. Algunas de esas se pueden bloquear de vez en cuando. Al descomponer una aplicación en varios hilos secuenciales que se ejecutan en cuasi paralelo, el modelo de programación se simplifica.
+El Hilo no es más que un fragmento de un programa que puede ser ejecutado al mismo tiempo que otro. Tiene su propia cabecera que se compone de un Contador de Programa, una serie de registros y un área de pila. Al igual que los procesos, cada hilo puede compartir con los otros hilos, código, datos y recursos del sistema operativo.
+Cabe resaltar que el código, los datos y los recursos son poseídos por una entidad conocida como ***tarea***, estas tareas por sí solas no tienen capacidad para ejecutarse, solo poseen recursos. Estas tareas pueden ser asignadas a uno o varios hilos para que puedan ser ejecutadas, cada hilo solo puede ejecutar una tarea.
+La justificación para la existencia de hilos es que la conmutación de un hilo a otro es mucho más ligera para el procesador que la conmutación entre dos procesos, esto debido a que en los hilos solo se tienen salvar la información de los registros y conmutar su pila.
 
->[!example] Ejemplo de Uso de Hilos
->Suponga que tenemos un procesador de palabras, que funciona con dos hilos. Un hilo interactúa con el usuario y el otro se encarga de volver a dar formato en segundo plano. Tan pronto como se elimina el enunciado de la página 1, el hilo interactivo indica al hilo encargado de volver a dar formato que aplique de nuevo formato a todo el libro. Mientras tanto, el hilo interactivo sigue esperando las acciones del teclado y del ratón y responde a comandos simples como desplazarse por la página 1, mientras el otro hilo está realizando cálculos intensivos en segundo plano. Con algo de suerte, el proceso de volver a dar formato se completará antes de que el usuario pida ver la página 600, para que pueda mostrarse al instante.
->Debemos aclarar que aquí no funcionaría tener dos procesos separados, ya que los dos hilos necesitan operar en el documento. Al tener dos hilos en vez de dos procesos, comparten una memoria común y por ende todos tienen acceso al documento que se está editando.
-
-Supongamos que tenemos una estructura básica de aplicación donde tenemos que aceptar entradas, procesarlas y almacenar su salida, los hilos ofrecen una solución. El proceso podría estructurarse con un hilo de entrada, un hilo de procesamiento y un hilo de salida. El hilo de entrada lee datos y los coloca en un búfer de entrada. El hilo de procesamiento toma datos del búfer de entrada, los procesa y coloca los resultados en un búfer de salida. El búfer de salida escribe estos resultados de vuelta en el disco. De esta forma, todas las 
-operaciones de entrada, salida y procesamiento pueden estar ocurriendo al mismo tiempo.
+>[!tldr] Implementación de los Hilos
+>Los hilos pueden ser implementados de dos maneras:
+>1. A nivel usuario, en este caso la aplicación se encargará de la administración de los hilos
+>	- Ventajas
+>		- La conmutación entre hilos se realiza rápidamente.
+>		- La planificación se realiza de manera independiente, sin ayuda del sistema operativo.
+>		- Es un mecanismo más portable, ya que es independiente del sistema operativo.
+>	- Desventajas
+>		- Si el sistema operativo no sabe de la existencia de los hilos dentro de una tarea, el bloqueo de un hilo producirá el bloqueo del resto de hilos de la misma tarea.
+>		- No va a existir una protección entre hilos, porque el sistema operativo no los reconoce.
+>2. A nivel de Sistema Operativo, el núcleo del sistema se encarga de la administración y planificación de los hilos.
+>	- Ventajas
+>		- El bloqueo de uno de estos hilos no afecta la ejecución del resto de hilos.
+>		- Permite dividir el proceso en múltiples procesadores.
+>	- Desventajas
+>		- La conmutación entre hilos se realiza mediante interrupciones, lo que genera una mayor sobrecarga en el procesador.
+>		- Es mucho más lento que a nivel de usuario.
 
 ### El Modelo Clásico de Hilos
 
