--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -65,9 +65,10 @@ Son aquellas unidades que pueden tomar parámetros de tipos diferentes en distin
 ## Constructores de Encapsulamiento
 
 A medida que los programas se van volviendo más y más grandes, los diferentes lenguajes deben brindar un mecanismo mediante el cual se pueda organizar todo el programa de una manera lógica, y que permita reutilizar el código escrito.
-Para responder a estas necesidades, los lenguajes crearon mecanismos que permite agrupar distintos subprogramas relacionados en un mismo lugar, de modo que puedan ser compilados por separado sin necesidad de compilar todo el programa cada vez que se modifica algo de estas unidades. De esto se desprende las distintas maneras de compilar que emplea cada uno de los lenguajes, entre ellas están:
+Para responder a estas necesidades, los lenguajes crearon mecanismos que permite agrupar distintas unidades relacionadas en un mismo lugar, de modo que puedan ser compilados por separado sin necesidad de compilar todo el programa cada vez que se modifica algo de estas unidades. De esto se desprende dos maneras de compilar que emplean los lenguajes, entre ellas están:
 
-- **Compilación separada**, también conocida como compilación modular, es una técnica utilizada en la programación y desarrollo de software que permite dividir un programa grande en módulos más pequeños y manejables, que se pueden compilar por separado antes de ser enlazados juntos para formar la aplicación final.
+- **Compilación separada**: En la compilación separada, las unidades se compilan siguiendo un orden, un lenguaje que utiliza este mecanismo es ADA.
+- **Compilación Independiente**: Se compilan las unidades sin seguir un orden especifico.
 
 #### Encapsulamiento de Nombres
 
